--- a/css/user.css
+++ b/css/user.css
@@ -1,121 +1,132 @@
 img {
-    border-radius: 50%;
-    width: 200px;
-    height: 200px;
-    margin-top: 30px;
-  }
+  border-radius: 50%;
+  width: 200px;
+  height: 200px;
+  margin-top: 30px;
+}
 
 .container {
-    border: 2px solid black;
-    border-radius: 8px;
-    padding: 20px;
-    width: 70%;
-    height: 50%;
-    margin: auto;
+  border: 2px solid black;
+  border-radius: 8px;
+  padding: 20px;
+  width: 70%;
+  height: 50%;
+  margin: auto;
 }
 
 p.inset {
-    border-style: inset;
-    width: 25%;
-    padding: 5px;
+  border-style: inset;
+  width: 25%;
+  padding: 5px;
 }
 
 p.filter{
-    float: left;
-    font-size:18px;
-    line-height: 30px;
-    margin-right: 10px;
+  float: left;
+  font-size:18px;
+  line-height: 30px;
+  margin-right: 10px;
 }
 
 button.network{
-    float: left;
-    font-size:18px;
-    border-radius: 4px;
-    border: none;
-    padding: 5px;
-    background-color: #A9A9A9;
-    margin-right: 10px;
+  float: left;
+  font-size:18px;
+  border-radius: 4px;
+  border: none;
+  padding: 5px;
+  background-color: #A9A9A9;
+  margin-right: 10px;
 }
 
 button.NFT{
-    float: left;
-    font-size:18px;
-    border-radius: 4px;
-    border: none;
-    padding: 5px;
-    background-color: #A9A9A9;
+  float: left;
+  font-size:18px;
+  border-radius: 4px;
+  border: none;
+  padding: 5px;
+  background-color: #A9A9A9;
 }
 
 .search{
-    max-width:300px;
-    float: right;
+  max-width:300px;
+  float: right;
 }
 
 .search input[type=text]{
-    padding: 10px;
-    font-size: 17px;
-    border: 1px solid grey;
-    float: left;
-    width: 80%;
-    background: #f1f1f1;
-    margin-top: -28px;
-    border-radius: 4px;
+  padding: 10px;
+  font-size: 17px;
+  border: 1px solid grey;
+  float: left;
+  width: 80%;
+  background: #f1f1f1;
+  margin-top: -28px;
+  border-radius: 4px;
 }
 
 .search button{
-    float: left;
-    width: 20%;
-    padding: 10px;
-    background: #2196F3;
-    color: white;
-    font-size: 17px;
-    border: 1px solid grey;
-    border-left: none;
-    cursor: pointer;
-    margin-top: -28px;
-    border-radius: 4px;
+  float: left;
+  width: 20%;
+  padding: 10px;
+  background: #2196F3;
+  color: white;
+  font-size: 17px;
+  border: 1px solid grey;
+  border-left: none;
+  cursor: pointer;
+  margin-top: -28px;
+  border-radius: 4px;
 }
 
 .search button:hover {
-    background: #0b7dda;
-  }
+  background: #0b7dda;
+}
 
 .item1 {
-    grid-column: 1 / span 2;
-    grid-row: 1;
-  }
+  grid-column: 1 / span 2;
+  grid-row: 1;
+}
 
-  .grid-item {
-    background-color: rgba(255, 255, 255, 0.8);
-    text-align: center;
-    font-size: 30px;
-  }
-  .grid-container {
-    display: grid;
-    gap: 5px;
-    padding: 10px;
-    width: 30%;
-    margin:auto;
-  }
-  
-  .button{
-    background-color: #3FAAF3 ;
-    border: none;
-    color: white;
-    padding: 8px 20px;
-    text-align: center;
-    text-decoration: none;
-    display: inline-block;
-    font-size: 18px;
-    margin: 4px 2px;
-    cursor: pointer;
-    border-radius: 10px;
-  }
-  
-  .button:hover{
-    background-color: #2283C6;
-  }
+.grid-item {
+  background-color: rgba(255, 255, 255, 0.8);
+  text-align: center;
+  font-size: 30px;
+}
+.grid-container {
+  display: grid;
+  gap: 5px;
+  padding: 10px;
+  width: 30%;
+  margin:auto;
+}
 
-  .flex-container{
-    display: flex;
-  }
+.button{
+  background-color: #3FAAF3 ;
+  border: none;
+  color: white;
+  padding: 8px 20px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 18px;
+  margin: 4px 2px;
+  cursor: pointer;
+  border-radius: 10px;
+}
+
+.button:hover{
+  background-color: #2283C6;
+}
+
+.flex-container{
+  display: flex;
+}
+
+p.title {
+  font-size: 16px;
+  font-weight: 400;
+}
+
+p.price {
+  font-size: 20px;
+  font-weight: 400;
+  margin-top: 8px;
+}
